updated launch.json to use Chrome; added scrollbars to textarea; added code to save text to a file.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,8 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "msedge",
+            //"type": "msedge",
+            "type": "chrome",
             "request": "launch",
             "name": "Open index.html",
             "file": "c:\\Users\\PW\\source\\repos\\web\\simpletrondirect\\index.html",
